--- a/index.html
+++ b/index.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HOST file 1</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+body {
+    background-color: #0f0f1d;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    text-align: center;
+    margin-top: 200px;
+}
+
+.button {
+    display: inline-block;
+    padding: 20px 40px;
+    font-size: 24px;
+    background-color: #ffffff;
+    color: #0f0f1d;
+    border: none;
+    border-radius: 10px;
+    margin: 10px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #ffca3a;
+    color: #0f0f1d;
+}
+    </style>
 </head>
 <body>
-  <h1>Download ...</h1>
-  <br>
-  <h2>THX Zmod3d  </h2>
-  <br>
-  <h2>Dark Space Host</h2>
-  <script src="sc.js"></script>
+    <div class="container">
+
+ <h2>  DARK SPACE HOST</h2>   
+ <h3>THX Zmod3d</h3>
+<br><br>
+      <a href="PS3HEN.p3t" class="button">Download PS3HEN.3pt</a>
+        <br> <br>
+        <a href="HEN.p3t" class="button">Download PS3HEN.3pt</a>
+        <br> <br>
+        <a href="HEN HOST.html" class="button">Go HEN Page</a>
+    </div>
 </body>
 </html>
