--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 <br><br>
       <a href="PS3HEN.p3t" class="button">Download PS3HEN.3pt</a>
         <br> <br>
-        <a href="HEN.p3t" class="button">Download PS3HEN.3pt</a>
+        <a href="HEN.p3t" class="button">Download HEN.3pt</a>
         <br> <br>
         <a href="HEN HOST.html" class="button">Go HEN Page</a>
     </div>
